add shop and refactor docs under opensource

--- a/eden-details.html
+++ b/eden-details.html
@@ -115,11 +115,11 @@
 							<div class="collapse navbar-collapse mean-menu">
 								<ul class="navbar-nav m-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link active">
+										<a href="#" class="nav-link active">
 											Home
 										</a>
 									</li>
-									
+
 									<li class="nav-item">
 										<a href="about.html" class="nav-link active">
 											Company
@@ -134,10 +134,13 @@
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="http://synergy.yeetum.com" class="nav-link">Synergy</a>
+												<a href="https://docs.yeetum.com" class="nav-link">Docs</a>
 											</li>
 											<li class="nav-item">
-												<a href="https://vault.yeetum.com" class="nav-link">Vault</a>
+												<a href="http://synergy.yeetum.com" class="nav-link">Synergy, Open-Source Web3 Community</a>
+											</li>
+											<li class="nav-item">
+												<a href="https://vault.yeetum.com" class="nav-link">Knowledge Vault</a>
 											</li>
 											<li class="nav-item">
 												<a href="https://github.com/Yeetum" class="nav-link">Github</a>
@@ -162,15 +165,17 @@
 										</ul>
 									</li>
 									<li class="nav-item">
-										<a href="https://docs.yeetum.com" class="nav-link active">
-											Docs
+										<a href="https://shop.yeetum.com" class="nav-link">
+											Shop
 										</a>
 									</li>
+									
 									<li class="nav-item">
-										<a href="https://status.yeetum.com" class="nav-link active">
+										<a href="https://status.yeetum.com" class="nav-link">
 											System Status
 										</a>
 									</li>
+
 									<li class="nav-item">
 										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
 									</li>
