--- a/index.html
+++ b/index.html
@@ -133,10 +133,13 @@
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="http://synergy.yeetum.com" class="nav-link">Synergy</a>
+												<a href="https://docs.yeetum.com" class="nav-link">Docs</a>
 											</li>
 											<li class="nav-item">
-												<a href="https://vault.yeetum.com" class="nav-link">Vault</a>
+												<a href="http://synergy.yeetum.com" class="nav-link">Synergy, Open-Source Web3 Community</a>
+											</li>
+											<li class="nav-item">
+												<a href="https://vault.yeetum.com" class="nav-link">Knowledge Vault</a>
 											</li>
 											<li class="nav-item">
 												<a href="https://github.com/Yeetum" class="nav-link">Github</a>
@@ -161,12 +164,13 @@
 										</ul>
 									</li>
 									<li class="nav-item">
-										<a href="https://docs.yeetum.com" class="nav-link active">
-											Docs
+										<a href="https://shop.yeetum.com" class="nav-link">
+											Shop
 										</a>
 									</li>
+									
 									<li class="nav-item">
-										<a href="https://status.yeetum.com" class="nav-link active">
+										<a href="https://status.yeetum.com" class="nav-link">
 											System Status
 										</a>
 									</li>
@@ -225,8 +229,8 @@
 							<div class="col-lg-9">
 								<div class="banner-content">
 									<span class="top-title wow fadeInDown" data-wow-delay="1s">Cyber Agency</span>
-									<h1 class="wow fadeInDown" data-wow-delay="1s">Deep Value<span><br>Intelligence</span></h1>
-									<p class="wow fadeInLeft" data-wow-delay="1s">Data driven nerds. Cloud-native operations. <br>Information Advisors & Intelligence network.</p>
+									<h1 class="wow fadeInDown" data-wow-delay="1s">We fight financial advisors and<span><br>protect your data</span></h1>
+									<p class="wow fadeInLeft" data-wow-delay="1s">Deep value intelligence. Data driven nerds. Cloud-native operations. <br>Information Advisors & Intelligence network.</p>
 		
 									<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
 										<a href="EdenClub.html" class="default-btn">
