overhaul headers & footers

--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
 							<ul class="header-left-content">
 								<li>
 									<i class="bx bx-info-circle"></i>
-									<a href="mailto:info@yeetum.ai">info@yeetum.com</a>
+									<a href="mailto:info@yeetum.com">info@yeetum.com</a>
 								</li>
 							</ul>
 						</div>
@@ -134,16 +134,19 @@
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="https://docs.yeetum.com" class="nav-link">Docs</a>
+												<a href="https://docs.yeetum.com" class="nav-link">Getting Started</a>
 											</li>
 											<li class="nav-item">
-												<a href="http://synergy.yeetum.com" class="nav-link">Synergy, Open-Source Web3 Community</a>
+												<a href="http://synergy.yeetum.com" class="nav-link">Synergy, Web3 Community</a>
 											</li>
 											<li class="nav-item">
 												<a href="https://vault.yeetum.com" class="nav-link">Knowledge Vault</a>
 											</li>
 											<li class="nav-item">
 												<a href="https://github.com/Yeetum" class="nav-link">Github</a>
+											</li>
+											<li>
+												<a href="https://opensea.io/collection/yeetum-synergy-of-the-web">NFTs</a>
 											</li>
 										</ul>
 									</li>
@@ -318,7 +321,16 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="EdenClub.html">Eden Club</a>
+									<a href="https://93dfxc9nk19.typeform.com/to/RxmVqwup?typeform-source=admin.typeform.com">Apply</a>
+								</li>
+								<li>
+									<a href="EdenClub.html">Eden Information Club & Advisory</a>
+								</li>
+								<li>
+									<a href="https://shop.yeetum.com">Merch Shop</a>
+								</li>
+								<li>
+									<a href="https://status.yeetum.com">System Status</a>
 								</li>
 								<li>
 									<a href="about.html">About</a>
@@ -336,10 +348,16 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="http://synergy.yeetum.com">Synergy</a>
+									<a href="https://docs.yeetum.com">Documentation</a>
 								</li>
 								<li>
-									<a href="https://vault.yeetum.com">Vault</a>
+									<a href="http://synergy.yeetum.com">Synergy, Web3 Community</a>
+								</li>
+								<li>
+									<a href="https://vault.yeetum.com">Knowledge Vault</a>
+								</li>
+								<li>
+									<a href="https://opensea.io/collection/yeetum-synergy-of-the-web">NFTs</a>
 								</li>
 								<li>
 									<a href="https://github.com/Yeetum">Github</a>
