resolve html route issue

--- a/404.html
+++ b/404.html
@@ -159,11 +159,11 @@
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="EdenClub.html" class="nav-link">Membership</a>
+												<a href="edenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="Eden-details.html" class="nav-link">Service Details</a>
+												<a href="eden-details.html" class="nav-link">Service Details</a>
 											</li>
 										</ul>
 									</li>
@@ -324,7 +324,7 @@
 									<a href="https://93dfxc9nk19.typeform.com/to/RxmVqwup?typeform-source=admin.typeform.com">Apply</a>
 								</li>
 								<li>
-									<a href="EdenClub.html">Eden Information Club & Advisory</a>
+									<a href="edenClub.html">Eden Information Club & Advisory</a>
 								</li>
 								<li>
 									<a href="https://shop.yeetum.com">Merch Shop</a>
