--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -159,13 +159,12 @@
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="EdenClub.html" class="nav-link">Membership</a>
+												<a href="edenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="Eden-details.html" class="nav-link">Service Details</a>
+												<a href="eden-details.html" class="nav-link">Service Details</a>
 											</li>
-										</ul>
 									</li>
 									<li class="nav-item">
 										<a href="https://shop.yeetum.com" class="nav-link">
@@ -394,7 +393,7 @@
 									<a href="https://93dfxc9nk19.typeform.com/to/RxmVqwup?typeform-source=admin.typeform.com">Apply</a>
 								</li>
 								<li>
-									<a href="EdenClub.html">Eden Information Club & Advisory</a>
+									<a href="edenClub.html">Eden Information Club & Advisory</a>
 								</li>
 								<li>
 									<a href="https://shop.yeetum.com">Merch Shop</a>
