aesthic copy modifications

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 									<p class="wow fadeInLeft" data-wow-delay="1s">Deep value intelligence. Data driven nerds. Cloud-native operations. <br>Information Advisors & Intelligence network.</p>
 		
 									<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
-										<a href="EdenClub.html" class="default-btn">
+										<a href="edenClub.html" class="default-btn">
 											<span>Join the Eden Club</span>
 										</a>
 									</div>
@@ -264,9 +264,9 @@
 							<div class="overly-two">
 								<div class="title">
 									<i class="flaticon-application"></i>
-									<h3>Cyber Market Information Tools</h3>
+									<h3>Cyber Intelligence</h3>
 								</div>
-								<p>Market data mining across currencies, futures, equities, and crypto-currencies. All with a cloud-native competitive edge.</p>
+								<p>Deep specialists in Cyber & Money as a discipline. From the birth of classical computing to Pope Bonaface. All with a cloud-native data-driven competitive edge.</p>
 							</div>
 						</div>
 					</div>
@@ -278,7 +278,7 @@
 									<i class="flaticon-cybercrime"></i>
 									<h3>Eden Club</h3>
 								</div>
-								<p>Information Advisory subscription enabling members with Web3 strategies, hardware wallets & crypto security, daily signals intelligence on stocks & crypto, central banking, geo-politics, market analysis, and private networks & events.</p>
+								<p>Information Advisory subscription enabling members with Web3 strategies, hardware wallets & crypto security, central banking, geo-politics, market analysis, and private business, networks, & events.</p>
 							</div>
 						</div>
 					</div>
@@ -289,7 +289,7 @@
 								<a href="http://synergy.yeetum.com">
 								<div class="title">
 									<i class="flaticon-cyber-security"></i>
-									<h3>Synergy Community</h3>
+									<h3>Synergy: Community Intelligence</h3>
 								</div>
 								<p><span>Click here</span> to join an always free and open-source community - Synergy. We're dedicated to fostering community intelligence, enablement, and success. Don't feel stranded in your pursuits.</p>
 								</a>
@@ -318,19 +318,19 @@
 
 					<div class="col-lg-6">
 						<div class="approach-content">
-							<h3>Without slowing down for a moment, Eden Club provides you information on the growing web3 economy and how to navigate.</h3>
+							<h3>Without slowing down for a moment, Eden Club provides you information on the growing web3 economy, numismatic history, and how to navigate, analyze, and obtain grounded confidence.</h3>
 
 							<div class="row">
 								<div class="col-lg-6 col-sm-6">
 									<div class="single-approach">
 										<h3>Technical Edge</h3>
-										<p>Our cloud and investment businesses leverage cloud-native IT and cloud-centric data disciplines.</p>
+										<p>Our information services leverage cloud-native IT and cloud-centric data disciplines.</p>
 									</div>
 								</div>
 
 								<div class="col-lg-6 col-sm-6">
 									<div class="single-approach">
-										<h3>Security Focus</h3>
+										<h3>Security First</h3>
 										<p>Zero-trust security. Prioritizing trust and security for both human and cyber aspects as an operating principle.</p>
 									</div>
 								</div>
@@ -345,7 +345,7 @@
 								<div class="col-lg-6 col-sm-6">
 									<div class="single-approach">
 										<h3>Information Pipeline</h3>
-										<p>Tailored information to Cyber economics.</p>
+										<p>Persistent information feeds, chats, and on-demand dialogues regarding Cyber & Money oriented around primordial community principles.</p>
 									</div>
 								</div>
 							</div>
