--- a/edenClub.html
+++ b/edenClub.html
@@ -287,7 +287,7 @@
 							<div class="overly-two">
 								<div class="pricing-title">
 									<h3>Popular</h3>
-									<h2><Sub>$</Sub>75</h2>
+									<h2><Sub>$</Sub>90</h2>
 									<span>Per 3 month</span>
 									<h4>Includes</h4>
 								</div>
@@ -300,7 +300,7 @@
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/bIY6qG0pPbSi1C8144" class="default-btn">
+								<a href="https://buy.stripe.com/bIY2aqdcB8G6cgM7sz" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
@@ -319,7 +319,7 @@
 							<div class="overly-two">
 								<div class="pricing-title">
 									<h3>Yearly Discount (3 months)</h3>
-									<h2><Sub>$</Sub>240</h2>
+									<h2><Sub>$</Sub>275</h2>
 									<span>Per year</span>
 									<h4>Includes</h4>
 								</div>
@@ -332,7 +332,7 @@
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/28o6qGc8xg8ya8E4gh" class="default-btn">
+								<a href="https://buy.stripe.com/7sIbL01tT1dEa8EcMS" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
