modify eden details button

--- a/eden-details.html
+++ b/eden-details.html
@@ -277,7 +277,7 @@
 					</div>
 
 					<div class="challenge-btn">
-						<a href="EdenClub.html" class="default-btn overly-one">
+						<a href="edenClub.html" class="default-btn overly-one">
 							<span>Join the Eden Club</span>
 						</a>
 					</div>
