change open-source copy

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Open-Source
+											Resources
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
