--- a/eden-details.html
+++ b/eden-details.html
@@ -370,7 +370,7 @@
 
 					<div class="col-lg-3 col-md-6">
 						<div class="single-footer-widget">
-							<h3>Open-Source</h3>
+							<h3>Resources</h3>
 
 							<ul class="import-link">
 								<li>
