--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Open-Source
+											Resources
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
