change copy on apply

--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 									</li>
 									
 									<li class="nav-item">
-										<a href="https://93dfxc9nk19.typeform.com/to/RxmVqwup?typeform-source=admin.typeform.com">Apply</a>
+										<a href="https://93dfxc9nk19.typeform.com/to/RxmVqwup?typeform-source=admin.typeform.com">Contribute</a>
 									</li>
 
 									<li class="nav-item">
