modify mobile atlas login button

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 							<div class="option-inner">
 								<div class="others-option justify-content-center d-flex align-items-center">
 									<div class="get-quote">
-										<a href="coming-soon.html" class="default-btn">
-											<span>ATLAS</span>
+										<a href="https://cloud.yeetum.com/signin" class="default-btn">
+											<span>ATLAS Login</span>
 										</a>
 									</div>
 								</div>
