--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -207,7 +207,7 @@
 							<div class="option-inner">
 								<div class="others-option justify-content-center d-flex align-items-center">
 									<div class="get-quote">
-										<a href="coming-soon.html" class="default-btn">
+										<a href="https://cloud.yeetum.com/signin" class="default-btn">
 											<span>ATLAS</span>
 										</a>
 									</div>
