expand eden services/pricing & add atlas backlinks

--- a/edenClub.html
+++ b/edenClub.html
@@ -168,6 +168,11 @@
 										</ul>
 									</li>
 									<li class="nav-item">
+										<a href="https://cloud.yeetum.com" class="nav-link">
+											Cloud
+										</a>
+									</li>
+									<li class="nav-item">
 										<a href="https://shop.yeetum.com" class="nav-link">
 											Shop
 										</a>
@@ -255,20 +260,24 @@
 							<div class="overly-two">
 								<div class="pricing-title">
 									<h3>Monthly</h3>
-									<h2><Sub>$</Sub>40</h2>
+									<h2><Sub>$</Sub>250</h2>
 									<span>Per 1 month</span>
 									<h4>Includes</h4>
 								</div>
 	
 								<ul>
 									<li>Eden Club Membership</li>
-									<li>Crypto Hardware Wallet (~3 months of payment required for this tier)</li>
+									<li>Human Asset Network</li>
+									<li>White Glove Incident Response</li>
+									<li>DDoS Protection</li>
+									<li>Cyber Partners</li>
+									<li>Crypto Hardware Wallet</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
+									<li>Exclusive Eden Club Channels, Business, Events</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/7sIdT84G5e0q1C83ch" class="default-btn">
+								<a href="https://buy.stripe.com/cN24iyc8x9Ka0y4bIQ" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
@@ -287,20 +296,24 @@
 							<div class="overly-two">
 								<div class="pricing-title">
 									<h3>Popular</h3>
-									<h2><Sub>$</Sub>90</h2>
-									<span>Per 3 month</span>
+									<h2><Sub>$</Sub>1,200</h2>
+									<span>Per 6 month</span>
 									<h4>Includes</h4>
 								</div>
 	
 								<ul>
 									<li>Eden Club Membership</li>
+									<li>Human Asset Network</li>
+									<li>White Glove Incident Response</li>
+									<li>DDoS Protection</li>
+									<li>Cyber Partners</li>
 									<li>Crypto Hardware Wallet</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
+									<li>Exclusive Eden Club Channels, Business, Events</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/bIY2aqdcB8G6cgM7sz" class="default-btn">
+								<a href="https://buy.stripe.com/6oEeXc8Wl6xY5So4gp" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
@@ -318,21 +331,25 @@
 						<div class="single-pricing overly-one">
 							<div class="overly-two">
 								<div class="pricing-title">
-									<h3>Yearly Discount (3 months)</h3>
-									<h2><Sub>$</Sub>275</h2>
+									<h3>Yearly</h3>
+									<h2><Sub>$</Sub>2,250</h2>
 									<span>Per year</span>
 									<h4>Includes</h4>
 								</div>
 	
 								<ul>
 									<li>Eden Club Membership</li>
+									<li>Human Asset Network</li>
+									<li>White Glove Incident Response</li>
+									<li>DDoS Protection</li>
+									<li>Cyber Partners</li>
 									<li>Crypto Hardware Wallet</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/7sIbL01tT1dEa8EcMS" class="default-btn">
+								<a href="https://buy.stripe.com/6oE3eu2xX4pQdkQaEO" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
@@ -466,6 +483,9 @@
 								</li>
 								<li>
 									<a href="edenClub.html">Eden Information Club & Advisory</a>
+								</li>
+								<li>
+									<a href="https://cloud.yeetum.com">Cloud</a>
 								</li>
 								<li>
 									<a href="https://shop.yeetum.com">Merch Shop</a>
