--- a/404.html
+++ b/404.html
@@ -150,7 +150,11 @@
 											</li>
 										</ul>
 									</li>
-
+									<li class="nav-item">
+										<a href="https://cloud.yeetum.com" class="nav-link">
+											Cloud
+										</a>
+									</li>
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Eden Club
@@ -318,6 +322,9 @@
 								</li>
 								<li>
 									<a href="edenClub.html">Eden Information Club & Advisory</a>
+								</li>
+								<li>
+									<a href="https://cloud.yeetum.com">Cloud</a>
 								</li>
 								<li>
 									<a href="https://shop.yeetum.com">Merch Shop</a>
