--- a/about.html
+++ b/about.html
@@ -169,6 +169,11 @@
 										</ul>
 									</li>
 									<li class="nav-item">
+										<a href="https://cloud.yeetum.com" class="nav-link">
+											Cloud
+										</a>
+									</li>
+									<li class="nav-item">
 										<a href="https://shop.yeetum.com" class="nav-link">
 											Shop
 										</a>
@@ -462,6 +467,9 @@
 						</li>
 						<li>
 							<a href="edenClub.html">Eden Information Club & Advisory</a>
+						</li>
+						<li>
+							<a href="https://cloud.yeetum.com">Cloud</a>
 						</li>
 						<li>
 							<a href="https://shop.yeetum.com">Merch Shop</a>
