--- a/eden-details.html
+++ b/eden-details.html
@@ -168,6 +168,11 @@
 										</ul>
 									</li>
 									<li class="nav-item">
+										<a href="https://cloud.yeetum.com" class="nav-link">
+											Cloud
+										</a>
+									</li>
+									<li class="nav-item">
 										<a href="https://shop.yeetum.com" class="nav-link">
 											Shop
 										</a>
@@ -254,10 +259,16 @@
 							<h4>Benefits:</h4>
 							<ul>
 							
-								<li>-Crypto Hardware Wallet</li>
-								<li>-Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-								<li>-Exclusive Eden Club Channels, Business, Events, & Networking</li>
-								<li>-On-Demand Education & Enablement sessions</li>
+								<li>Eden Club Membership</li>
+								<li>Human Asset Network</li>
+								<li>White Glove Incident Response</li>
+								<li>DDoS Protection</li>
+								<li>Cyber Partners</li>
+								<li>Crypto Hardware Wallet</li>
+								<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
+								<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
+								<li>On-Demand Education & Enablement sessions</li>
+								
 							</ul>
 						</div>
 					</div>
@@ -351,6 +362,9 @@
 								</li>
 								<li>
 									<a href="edenClub.html">Eden Information Club & Advisory</a>
+								</li>
+								<li>
+									<a href="https://cloud.yeetum.com">Cloud</a>
 								</li>
 								<li>
 									<a href="https://shop.yeetum.com">Merch Shop</a>
