--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							<img src="assets/img/favicon.png" class="wow fadeInDown" data-wow-delay="1s" alt="Image">
 							<span class="top-title wow fadeInDown" data-wow-delay="1s">World Class Cyber Partners</span>
 							<h1 class="wow fadeInDown" data-wow-delay="1s">Fighting financial advisors and protecting your data.</h1>
-							<h1 class="wow fadeInDown" data-wow-delay="1s">We build and train cyber, financial, & crypto analysts.</h1>
+							<h1 class="wow fadeInDown" data-wow-delay="1s">Building cyber, financial, & crypto analysts.</h1>
 							<p class="wow fadeInUp" data-wow-delay="1s">Deep value intelligence. Data driven nerds. Zero-trust security. Cloud-native operations. Information Advisors & Intelligence network.</p>
 
 							<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
