modify eden copy

--- a/eden-details.html
+++ b/eden-details.html
@@ -263,7 +263,7 @@
 								<li>Human Asset Network</li>
 								<li>White Glove Incident Response</li>
 								<li>DDoS Protection</li>
-								<li>Cyber Partners</li>
+								<li>Cyber Partners - CTO/CIO/CISO</li>
 								<li>Crypto Hardware Wallet</li>
 								<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 								<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
