--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
 						<div class="banner-content">
 							<img src="assets/img/favicon.png" class="wow fadeInDown" data-wow-delay="1s" alt="Image">
 							<span class="top-title wow fadeInDown" data-wow-delay="1s">World Class Cyber Partners</span>
-							<h2 class="wow fadeInDown" data-wow-delay="1s">Fighting financial advisors and protecting your data.</h2>
-							<h2 class="wow fadeInDown" data-wow-delay="1s">Building cyber, financial, & crypto analysts.</h2>
-							<p class="wow fadeInUp" data-wow-delay="1s">Deep value intelligence. Data driven nerds. Zero-trust security. Cloud-native operations. Information Advisors & Intelligence network.</p>
+							<h1 class="wow fadeInDown" data-wow-delay="1s">Fighting financial advisors and protecting your data.</h1>
+							<p class="wow fadeInUp" data-wow-delay="1s">Eden Information Club and Advisory Group | ATLAS Cloud Platform</p>
 
 							<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
 								<a href="edenClub.html" class="default-btn">
