--- a/eden-details.html
+++ b/eden-details.html
@@ -153,24 +153,24 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Eden Club
+											Services
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="edenClub.html" class="nav-link">Membership</a>
+												<a href="edenClub.html" class="nav-link">Eden Club Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="eden-details.html" class="nav-link">Service Details</a>
+												<a href="eden-details.html" class="nav-link">Eden Club Service Details</a>
+											</li>
+											<li class="nav-item">
+												<a href="https://cloud.yeetum.com/pricing" class="nav-link">
+													ATLAS Cloud
+												</a>
 											</li>
 										</ul>
-									</li>
-									<li class="nav-item">
-										<a href="https://cloud.yeetum.com" class="nav-link">
-											Cloud
-										</a>
 									</li>
 									<li class="nav-item">
 										<a href="https://shop.yeetum.com" class="nav-link">
