remove discord  iframe change contact copy

--- a/404.html
+++ b/404.html
@@ -177,7 +177,7 @@
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
+										<a href="https://synergy.yeetum.com" class="nav-link">Community</a>
 									</li>
 								</ul>
 								
