--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									</li>
 
 									<li class="nav-item">
-										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
+										<a href="https://synergy.yeetum.com" class="nav-link">Community</a>
 									</li>
 								</ul>
 								
@@ -666,18 +666,6 @@
 			</div>
 		</section>
 		<!-- End Solution Area -->
-
-		<!-- Start Get In Touch Area -->
-		<section class="get-in-touch-area ptb-100 jarallax" data-jarallax='{"speed": 0.3}'>
-			<div class="container">
-				<div class="section-title white-title">
-					<span>Get In Touch</span>
-					<h2>Contact Us Today To Speak With A Yeetum Associate About Your Specific Needs</h2>
-					<iframe src="https://discord.com/widget?id=707964248109744190&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-				</div>
-			</div>
-		</section>
-		<!-- Eed Get In Touch Area -->
 
 		<!-- Start Protect Area 
 		<section class="protect-area protect-area-four pt-100 pb-70">
