--- a/edenClub.html
+++ b/edenClub.html
@@ -183,7 +183,7 @@
 									</li>
 
 									<li class="nav-item">
-										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
+										<a href="https://synergy.yeetum.com" class="nav-link">Community</a>
 									</li>
 								</ul>
 								
